bug-gnuastro info page added, expanded installation message
A bug-gnuastro top info hook was added to gnuastro.texi so users can easily
run `info bug-gnuastro' and get to the appropriate section of the manual
instructing them on how to best report bugs.

The message after installation was expanded to give some explanations for
first time users.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -45,7 +45,9 @@ Texts.  A copy of the license is included in the section entitled
 @direntry
 * Gnuastro: (gnuastro).       GNU Astronomy Utilities.
 
-* help-gnuastro: (gnuastro)help-gnuastro mailing list. Instructions.
+* help-gnuastro: (gnuastro)help-gnuastro mailing list. Getting help.
+
+* bug-gnuastro: (gnuastro)Report a bug. How to report bugs
 
 * ConvertType: (gnuastro)ConvertType. Convert different file types.
 * astconvertt: (gnuastro)Invoking astconvertt. Options to ConvertType.
